--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   </div>
 
   <div class="footer">
-    <h2>Built using open weather API</h2>
+    <h2>Author: Vaibhav Jha</h2>
     <a href="https://github.com/vaibhavjha31/Weather-app" target="_blank" ><img src="./images/GitHub.png" alt=""></a>
   </div>
 
